objects/vlocity_ins__GroupClassContribution__c.object
<CustomObject>
    <description>Represents employer or group contributions for group class members and their dependents on per product category such as medical, dental or vision. Master-detail child object of a Group Class.</description>
    <fields>
        <fullName>vlocity_ins__ContributionAmount__c</fullName>
        <description>The amount that an employer or a group will contribute towards the cost of the plan on behalf of the Group Class members/dependents.</description>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContributionPercent__c</fullName>
        <description>The percentage of the cost of the plan that an employer or a group will contribute on behalf of the Group Class members/dependents.</description>
        <label>Contribution Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContributionType__c</fullName>
        <description>Defines the type of the contribution in which an employer or a group will contribute towards the plan such as percentage of the cost or a flat amount.</description>
        <label>Contribution Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <description>The date of the group class contribution is no longer available for quoting</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <description>Availability date of the group class contribution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupClassId__c</fullName>
        <description>Id of the GroupClass for which the contributions are defined.</description>
        <label>Group Class</label>
        <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
        <relationshipLabel>Group Class Contributions</relationshipLabel>
        <relationshipName>GroupClassContributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MemberType__c</fullName>
        <description>Defines the type of the member for which the contribution is defined such as subscriber or dependent.</description>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductCategory__c</fullName>
        <description>Category of an Insurance product such as medical, dental or vision.</description>
        <label>Product Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Class Contribution</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Class Contribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Class Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>